--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ x-env-defaults: &env
   NODE_ENV: development
   NEW_RELIC_ENABLED: ${NEW_RELIC_ENABLED-0}
   NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY-(unset)}
-  EMAILX_SERVE_URI: ${EMAILX_SERVE_URI-https://abmedia.serve.email-x.parameter1.com}
+  EMAILX_SERVE_URI: ${EMAILX_SERVE_URI-https://bonhillgroup.serve.email-x.parameter1.com}
 
 x-env-virgon: &env-virgon
   GRAPHQL_URI: ${GRAPHQL_URI-https://virgon.graphql.base.parameter1.com}
