--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,11 @@ x-env-defaults: &env
   NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY-(unset)}
   EMAILX_SERVE_URI: ${EMAILX_SERVE_URI-https://bonhillgroup.serve.email-x.parameter1.com}
 
+x-env-leonis: &env-leonis
+  GRAPHQL_URI: ${GRAPHQL_URI-https://graphql.leonis.base.parameter1.com}
+
 x-env-virgon: &env-virgon
-  GRAPHQL_URI: ${GRAPHQL_URI-https://virgon.graphql.base.parameter1.com}
+  GRAPHQL_URI: ${GRAPHQL_URI-https://graphql.virgon.base.parameter1.com}
 
 services:
   terminal:
@@ -47,7 +50,7 @@ services:
     working_dir: /root/tenants/all
     environment:
       <<: *env
-      <<: *env-virgon
+      <<: *env-leonis
       PORT: 80
       EXPOSED_PORT: 22291
       LIVERELOAD_PORT: 32291
