Set node versions, upgrade packages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 x-node-defaults: &node
   tty: true
   init: true
-  image: node:10.15
+  image: node:14.21
   entrypoint: ["node"]
   working_dir: /root
   restart: always
@@ -13,6 +13,7 @@ x-node-defaults: &node
     - yarn-cache:/.yarn-cache
 
 x-newsletter-command: &newsletter-cmd
+  <<: *node
   entrypoint: ["node_modules/.bin/basecms-newsletters"]
   command: ["dev", "index.js"]
 
@@ -21,10 +22,8 @@ x-env-defaults: &env
   NODE_ENV: development
   NEW_RELIC_ENABLED: ${NEW_RELIC_ENABLED-0}
   NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY-(unset)}
-  EMAILX_SERVE_URI: ${EMAILX_SERVE_URI-https://bonhillgroup.serve.email-x.parameter1.com}
-
-x-env-virgon: &env-virgon
-  GRAPHQL_URI: ${GRAPHQL_URI-https://virgon.graphql.base.parameter1.com}
+  EMAILX_SERVE_URI: ${EMAILX_SERVE_URI-https://bonhill.serve.email-x.parameter1.com}
+  GRAPHQL_URI: ${GRAPHQL_URI-https://graphql.leonis.base.parameter1.com}
 
 services:
   terminal:
@@ -42,12 +41,10 @@ services:
       <<: *env
 
   all:
-    <<: *node
     <<: *newsletter-cmd
     working_dir: /root/tenants/all
     environment:
       <<: *env
-      <<: *env-virgon
       PORT: 80
       EXPOSED_PORT: 22291
       LIVERELOAD_PORT: 32291
